# claude-code-api-rs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTEGRATION_PLAN.md  README.md  README_CN.md  RELEASE_0.1.10.md  RELEASE_0.1.5.md  RELEASE_0.2.0.md  RELEASE_v0.1.6.md  STREAMING_EXPLANATION.md  VERSIONING.md  build-and-push.sh  cliff.toml  codecov.yml  deny.toml  docker-compose.yml  get_claude_models.py  rustfmt.toml  start_fast.sh  start_interactive.sh  start_optimized.sh  test_concurrent.py  use_latest_models.py
claude-code-sdk-rs/: CHANGELOG.md  Cargo.toml  DEADLOCK_FIX.md  ISSUE_ANALYSIS.md  OPTIMIZATIONS.md  PUBLISHING.md  README.md  README_CN.md  README_JA.md  RELEASE_NOTES.md  quick_test_naming.sh  run_test.sh
claude-code-sdk-rs/docs/: ACCOUNT_INFO.md  ENVIRONMENT_VARIABLES.md  FAQ.md  HOOK_EVENT_NAMES.md  SONNET_4_5_GUIDE.md  SUBAGENTS_BEST_PRACTICES.md  TOKEN_OPTIMIZATION.md  TOKEN_OPTIMIZATION_IMPLEMENTATION.md  UNIFIED_AGENT_ABSTRACTION.md  UPGRADE_COMPLETED.md  features-and-parameters.md  models-guide.md
claude-code-sdk-rs/examples/: .env.example  README.md  README_MODELS.md  account_info.rs  api_integration.rs  basic_client.rs  batch_processor.rs  check_current_account.rs  code_generator.rs  comprehensive_test.rs  control_format_demo.rs  control_protocol_demo.rs  demo_new_features.rs  demo_project_naming.rs  file_operations.rs  hooks_typed.rs  init_test.rs  interactive.rs  interactive_debug.rs  interactive_demo.rs  interactive_real_test.rs  interactive_test.rs  manual_interactive_test.rs  memory_chat.rs  model_selection_2025.rs  openai_compatible_server.rs  openai_compatible_with_history.rs  optimized_client_demo.rs  optimized_rest_server.rs  performance_benchmark.rs  performance_comparison.rs  performance_test.rs  permission_modes.rs  query_with_file_ops.rs  real_api_test.rs  rest_api_server.rs  rust_question_processor.rs  rust_question_processor_full.rs  sdk_mcp_calculator.rs  session_with_account_info.rs  (+27 more)
claude-code-sdk-rs/src/: cli_download.rs  client.rs  client_working.rs  errors.rs  interactive.rs  internal_query.rs  lib.rs  llm.rs  message_parser.rs  model_recommendation.rs  optimized_client.rs  perf_utils.rs  query.rs  sdk_mcp.rs  sessions.rs  token_tracker.rs  types.rs
claude-code-sdk-rs/src/memory/: integration.rs  message_document.rs  mod.rs  provider.rs  scoring.rs  tool_context.rs
claude-code-sdk-rs/src/transport/: mod.rs  subprocess.rs  websocket.rs
claude-code-sdk-rs/tests/: control_protocol_e2e.rs  e2e_control.rs  e2e_hooks.rs  e2e_mcp.rs  e2e_new_control_methods.rs  e2e_set_model_and_end_input.rs  e2e_set_permission_mode.rs  integration_test.rs  memory_integration_test.rs  mock_api_test.rs  optimized_api_test.rs  streaming_test.rs  test_hook_types.rs  test_p0_parity.rs  test_p1_task.rs  token_optimization_test.rs  unit_api_test.rs
src/: main.rs
(+85 files in other folders)
