[package]
name = "claude-code-api"
version = "0.1.4"
edition = "2024"
authors = ["blackanger"]
license = "MIT"
description = "OpenAI-compatible API gateway for Claude Code CLI"
repository = "https://github.com/ZhangHanDong/claude-code-api-rs"
readme = "README.md"
keywords = ["claude-code", "api", "openai", "ai", "llm"]
categories = [
    "web-programming::http-server",
    "command-line-utilities",
    "development-tools",
]

[[bin]]
name = "claude-code-api"
path = "src/main.rs"

[[bin]]
name = "ccapi"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["http2", "json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
config = "0.14"
argon2 = "0.5"
jsonwebtoken = "9"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
dashmap = "6"
parking_lot = "0.12"
sha2 = "0.10"
once_cell = "1"

[dev-dependencies]
axum-test = "15"
mockall = "0.12"
tempfile = "3"
